# TeleTok

./: .env.template  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  app.json  compose.yaml  main.py  pyproject.toml  requirements.txt  settings.py
.github/workflows/: main_teletok.yml  pr-checks.yaml
app/: __init__.py  __main__.py  bot.py  handlers.py  main.py  settings.py  tiktok.py  utils.py
app/tiktok/: api.py  client.py  data.py
bot/: __init__.py  exception.py
bot/api/: __init__.py  base.py  likee.py  tiktok.py
bot/data/: __init__.py  video.py
bot/handlers/: __init__.py  messages.py
